// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform method Does not allow computed api getters and setters 1`] = `
Object {
  "column": 0,
  "length": 22,
  "line": 3,
  "start": 109,
}
`;

exports[`Transform property Conflicting api properties with getter/setter 1`] = `
Object {
  "column": 0,
  "length": 4,
  "line": 5,
  "start": 84,
}
`;

exports[`Transform property Conflicting api properties with method 1`] = `
Object {
  "column": 0,
  "length": 4,
  "line": 4,
  "start": 69,
}
`;

exports[`Transform property Duplicate api properties 1`] = `
Object {
  "column": 0,
  "length": 4,
  "line": 4,
  "start": 69,
}
`;

exports[`Transform property detecting @api on both getter and a setter should produce an error 1`] = `
Object {
  "column": 0,
  "length": 46,
  "line": 7,
  "start": 95,
}
`;

exports[`Transform property throws correct error if property name is maxlength 1`] = `
Object {
  "column": 0,
  "length": 15,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws error if default value is true 1`] = `
Object {
  "column": 0,
  "length": 23,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws error if property name conflicts with disallowed global html attribute name 1`] = `
Object {
  "column": 0,
  "length": 10,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws error if property name is "is" 1`] = `
Object {
  "column": 0,
  "length": 8,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws error if property name is "part" 1`] = `
Object {
  "column": 0,
  "length": 10,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws error if property name is ambiguous 1`] = `
Object {
  "column": 0,
  "length": 14,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws error if property name prefixed with "data" 1`] = `
Object {
  "column": 0,
  "length": 16,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws error if property name prefixed with "on" 1`] = `
Object {
  "column": 0,
  "length": 21,
  "line": 3,
  "start": 55,
}
`;

exports[`Transform property throws when combined with @track 1`] = `
Object {
  "column": 0,
  "length": 4,
  "line": 4,
  "start": 69,
}
`;
